--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "jwt-decode": "^3.1.2",
     "netlify-cli": "^2.37.0",
+    "node-sass": "^7.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
