--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.4.1",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.2.0",
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "firebase": "^9.10.0",
     "jwt-decode": "^3.1.2",
     "netlify-cli": "^2.37.0",
     "node-sass": "^7.0.3",
