--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "firebase": "^9.10.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "netlify-cli": "^2.37.0",
     "node-sass": "^7.0.3",
     "rxjs": "~7.5.0",
